# docx_Properties

./: pyproject.toml
