[tool.poetry]
name = "docx-properties"
version = "0.1.0"
description = ""
authors = ["remeneme <dk3880930@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
